--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Internships</title>
+  <title>Todo</title>
   <base href="/">
+
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
